<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Amaze File Manager</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="icon">icon</string>
    <string name="apps">App Manager</string>
    <string name="ftp">FTP Server</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="press_again">Press again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapks">Copying %d APK files to %s</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="search_results">Search results of %s</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="bookmarks_added">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
    <string name="size">size of folder</string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="no_app_found">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="stopping">Stopping</string>
    <string name="open_parent">Open Parent Directory</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_glyph" translatable="false">&#9432;</string>
    <string name="dialog_delete_category_directories">Directories</string>
    <string name="dialog_delete_category_files">Files</string>
    <string name="dialog_delete_disclaimer">Deleting the items below will permanently remove them from your device and they cannot be recovered.</string>
    <string name="dialog_delete_temporarily_disclaimer">Are you sure you want to delete following items?</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="theme">Theme</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="root_mode">Root Explorer</string>
    <string name="root_mode_summary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="set_as_home">Set As Home</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
    <string name="ui">Interface</string>
    <string name="thumb_summary">Show Thumbnails of apps and images</string>
    <string name="thumb">Show Thumbnails</string>
    <string name="hidden">Show Hidden Files and Folders</string>
    <string name="lastModifiedSummary">Show the date and time of last modification</string>
    <string name="lastModifiedPref">Show Last Modified Date and Time</string>
    <string name="size_pref_summary">Show size of files and number of items in folders</string>
    <string name="size_pref">Show Sizes</string>
    <string name="root_pref_summary">Show Permissions of Files and Folders</string>
    <string name="root_pref">Show Permissions</string>
    <string name="about_amaze_file_manager_label">About Amaze File Manager</string>
    <string name="feedback">Send Feedback</string>
    <string name="hiddenfiles">Hidden Files</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="circular_images">Use circular icons for images and videos</string>
    <string name="circular_icons">Use circular icons</string>
    <string name="follow_battery_saver_title">Follow battery saver</string>
    <string name="follow_battery_saver_desc">If selected and the battery saver mode is turned on, the theme changes to dark theme</string>
    <string name="back_title">Back navigation</string>
    <string name="back_summary">Enables custom back navigation at top of the list</string>
    <string name="archive_extract_folder">Archive Extract Folder</string>
    <string name="archive_summary">Archive files will be extracted to this folder. Default value is the directory in which archive is present.</string>
    <string name="audio">Audio</string>
    <string name="save_paths">Remember paths</string>
    <string name="save_path_summary">When starting up, the most recently viewed folder for each tab will be displayed</string>
    <string name="select_intent">Select</string>
    <string name="colored_navigation">Colored Navigation bar</string>
    <string name="colored_navigvation_sum">Whether or not the system navigation bar is colored with the skin</string>
    <string name="color_title">Color</string>
    <string name="color_summary">Set color to various UI components</string>
    <string name="primary_color_title">Primary Color (Left Tab)</string>
    <string name="primary_color_summary">Set color to large UI elements for the left tab</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="accent_color_summary">Set color to FAB and other small UI elements</string>
    <string name="icon_color_title">Icon Color</string>
    <string name="icon_color_summary">Set color to icons</string>
    <string name="show_dividers">Show Dividers</string>
    <string name="videos">Videos</string>
    <string name="apks">APKs</string>
    <string name="documents">Documents</string>
    <string name="images">Images</string>
    <string name="sort">Sort</string>
    <string name="quick">Quick access</string>
    <string name="recent">Recent files</string>
    <string name="cut">Cut</string>
    <string name="search">Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="regular_expression_summary">Search using a BASH style regular expression</string>
    <string name="match_content">Match content</string>
    <string name="match_content_summary">If set, regular expression will be matched with entire file name,
        will look for occurrence otherwise.</string>
    <string name="ftp_port_edit_menu_title">FTP port</string>
    <string name="primary_two_title">Primary Color (Right Tab)</string>
    <string name="primary_two_summary">Set color to large UI elements for the right tab</string>
    <string name="security">Security</string>
    <string name="ftp_path">Shared Path</string>
    <string name="ftp_status_secure_connection">Secure Connection</string>
    <string name="ftp_login">Login</string>
    <string name="ftp_timeout">Idle timeout</string>
    <string name="intellihide_toolbar_title">Intellihide Toolbar</string>
    <string name="intellihide_toolbar_summary">Automatically hide toolbar while scrolling</string>
    <string name="sidebar_preferences">Sidebar</string>
    <string name="show_quick_access_pref_title">Show quick accesses</string>
    <string name="show_quick_access_pref">Quick accesses</string>
    <string name="show_bookmarks_pref">Bookmarks</string>
    <string name="showHeaders">Show Headers</string>
    <string name="advanced">Advanced</string>
    <string name="typeable_paths_title">Custom paths</string>
    <string name="typeable_paths_summary">Long press path bar to type a custom path</string>
    <string name="preference_newstack_title">Open files as new task</string>
    <string name="preference_newstack_summary">Allows you to open files in separate tasks. Access them from system recents screen.</string>
    <string name="select_color_config">Select color config</string>
    <string name="customize">Customize</string>
    <string name="preselected_configs_title">Preselected configs</string>
    <string name="enable_marquee_filename">Enable marquee effect for file names</string>
    <string name="ftp_readonly">Read-only access</string>
    <string name="clear_open_file">Clear cache</string>
    <string name="clear_open_file_summary">Clears selected default file opening apps</string>
    <string name="legacy_listing_title">Use legacy listing for root</string>
    <string name="legacy_listing_summary">If enabled, uses legacy method to list files</string>
    <string name="drag_and_drop_preference">Select drag and drop preference (Experimental)</string>
    <string name="ftp_preference_saf_filesystem_title">Use legacy filesystem</string>
    <string name="appearance">Appearance</string>
    <string name="behavior">Behavior</string>
    <string name="appearance_summary">Customize the theme, colors and appearance of the file manager</string>
    <string name="ui_summary">Control what information to show, customize the sidebar, and toggle UI preferences</string>
    <string name="behavior_summary">Modify behaviors such as advanced search and whether to open files as a new task</string>
    <string name="security_summary">Set up password and encryption</string>
    <string name="backup_summary">Export/Import Amaze settings</string>
    <string name="quick_desc">Files recently accessed through Amaze</string>
    <string name="recent_desc">Recently created or modified files</string>
    <string name="preference_delete_confirmation">Delete confirmation</string>
    <string name="preference_delete_confirmation_summary">Ask for confirmation before deleting files. Disabling this is highly discouraged!</string>
    <string name="disable_player_intent_filters">Disable player intent filters</string>
    <string name="disable_player_intent_filters_summary">Disables Amaze inbuilt media players from file chooser</string>
    <string name="preference_language_title">App Language</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="trash_bin_retention_num_of_files_title">Retention by number of files</string>
    <string name="trash_bin_retention_num_of_files_summary">Maximum files trash bin can store</string>
    <string name="trash_bin_retention_days_title">Retention by days</string>
    <string name="trash_bin_retention_days_summary">Maximum days for which trash bin can store a file</string>
    <string name="trash_bin_retention_bytes_title">Retention by data size</string>
    <string name="trash_bin_retention_bytes_summary">Maximum data (in MBs) trash bin can store</string>
    <string name="trash_bin_cleanup_interval_title">Cleanup interval</string>
    <string name="trash_bin_cleanup_interval_summary">Trigger auto-cleanup interval (hours)</string>
</resources>