<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="true"
        app:key="savepaths"
        app:summary="@string/save_path_summary"
        app:title="@string/save_paths" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="false"
        app:key="typeablepaths"
        app:summary="@string/typeable_paths_summary"
        app:title="@string/typeable_paths_title" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="false"
        app:key="texteditor_newstack"
        app:summary="@string/preference_newstack_summary"
        app:title="@string/preference_newstack_title" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="true"
        app:key="delete_confirmation"
        app:summary="@string/preference_delete_confirmation_summary"
        app:title="@string/preference_delete_confirmation" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="clear_open_file"
        app:summary="@string/clear_open_file_summary"
        app:title="@string/clear_open_file" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="disable_player_intent_filters"
        app:summary="@string/disable_player_intent_filters_summary"
        app:title="@string/disable_player_intent_filters" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="extractpath"
        app:summary="@string/archive_summary"
        app:title="@string/archive_extract_folder"></Preference>
    <PreferenceCategory android:title="@string/trash_bin">
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="retention_num_of_files"
            app:summary="@string/trash_bin_retention_num_of_files_summary"
            app:title="@string/trash_bin_retention_num_of_files_title"></Preference>
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="retention_days"
            app:summary="@string/trash_bin_retention_days_summary"
            app:title="@string/trash_bin_retention_days_title"></Preference>
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="retention_bytes"
            app:summary="@string/trash_bin_retention_bytes_summary"
            app:title="@string/trash_bin_retention_bytes_title"></Preference>
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="cleanup_interval"
            app:summary="@string/trash_bin_cleanup_interval_summary"
            app:title="@string/trash_bin_cleanup_interval_title"></Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_search">

        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="regex"
            app:summary="@string/regular_expression_summary"
            app:title="@string/regular_expression" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="matches"
            app:summary="@string/match_content_summary"
            app:title="@string/match_content" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/advanced">
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="false"
            app:key="legacyListing"
            app:summary="@string/legacy_listing_summary"
            app:title="@string/legacy_listing_title" />
        <com.amaze.filemanager.ui.views.preference.CheckBox
            app:defaultValue="false"
            app:key="rootmode"
            app:summary="@string/root_mode_summary"
            app:title="@string/root_mode" />
    </PreferenceCategory>
</PreferenceScreen>