<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="language"
        app:title="@string/preference_language_title" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showThumbs"
        app:summary="@string/thumb_summary"
        app:title="@string/thumb" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="false"
        app:key="showHidden"
        app:title="@string/hidden" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showLastModified"
        app:summary="@string/lastModifiedSummary"
        app:title="@string/lastModifiedPref" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="true"
        app:key="showFileSize"
        app:summary="@string/size_pref_summary"
        app:title="@string/size_pref" />
    <com.amaze.filemanager.ui.views.preference.CheckBox
        app:defaultValue="false"
        app:key="goBack_checkbox"
        app:summary="@string/back_summary"
        app:title="@string/back_title" />
    <Preference
        app:key="dragAndDropPreference"
        app:title="@string/drag_and_drop_preference" />

    <PreferenceCategory app:title="@string/sidebar_preferences">
        <Preference
            app:key="sidebar_bookmarks"
            app:title="@string/show_bookmarks_pref" />
        <Preference
            app:key="sidebar_quick_access"
            app:title="@string/show_quick_access_pref" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced">
        <com.amaze.filemanager.ui.views.preference.CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="false"
            app:key="showPermissions"
            app:summary="@string/root_pref_summary"
            app:title="@string/root_pref" />
    </PreferenceCategory>
</PreferenceScreen>