<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.amaze.filemanager.ui.views.preference.SelectedColorsPreference
        app:key="preselectedconfigs"
        app:title="@string/preselected_configs_title" />
    <PreferenceCategory app:title="@string/customize">
        <Preference
            app:key="skin"
            app:summary="@string/primary_color_summary"
            app:title="@string/primary_color_title" />
        <Preference
            app:key="skin_two"
            app:summary="@string/primary_two_summary"
            app:title="@string/primary_two_title" />
        <Preference
            app:key="accent_skin"
            app:summary="@string/accent_color_summary"
            app:title="@string/accent_color_title" />
        <Preference
            app:key="icon_skin"
            app:summary="@string/icon_color_summary"
            app:title="@string/icon_color_title" />
    </PreferenceCategory>
</PreferenceScreen>