<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.amaze.filemanager.ui.dialogs.ColorPickerDialog
        android:key="preselectedconfigs"
        android:title="@string/preselected_configs_title"/>
    <com.amaze.filemanager.ui.views.preference.InvalidablePreferenceCategory
        android:key="category"
        android:title="@string/customize">
        <Preference
            android:key="skin"
            android:title="@string/primary_color_title"
            android:summary="@string/primary_color_summary"/>
        <Preference
            android:key="skin_two"
            android:title="@string/primary_two_title"
            android:summary="@string/primary_two_summary" />
        <Preference
            android:key="accent_skin"
            android:title="@string/accent_color_title"
            android:summary="@string/accent_color_summary"/>
        <Preference
            android:key="icon_skin"
            android:title="@string/icon_color_title"
            android:summary="@string/icon_color_summary"/>
    </com.amaze.filemanager.ui.views.preference.InvalidablePreferenceCategory>
</PreferenceScreen>