<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="fastaccess"
        android:title="@string/quick"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="recent"
        android:title="@string/recent"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="image"
        android:title="@string/images"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="video"
        android:title="@string/videos"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="audio"
        android:title="@string/audio"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="documents"
        android:title="@string/documents"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="apks"
        android:title="@string/apks"/>
</PreferenceScreen>