<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addToList"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/paste"
        android:icon="@drawable/ic_content_paste_white_24dp"
        android:title="@string/paste"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortby"
                android:title="@string/sort_by" />
            <item
                android:id="@+id/dsort"
                android:title="@string/directorysort" />
        </menu>

    </item>
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/view"
        android:title="" />
    <item
        android:id="@+id/hiddenitems"
        android:title="@string/hiddenfiles"
        android:visible="false" />
    <item
        android:id="@+id/sethome"
        android:title="@string/set_as_home" />
    <item
        android:id="@+id/extract"
        android:title="@string/extract"
        android:visible="false" />

    <!-- orderInCategory=100 to have the element exit always at the end of the list -->
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit" />

</menu>
